# rss-llm-digest

./: .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  agent.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  system_prompt.yaml  urls.csv
integrations/: aiogram.py  email_notifier.py  message_state.py  telegram_notifier.py
memory/: vector_store.py
settings/: config.py
