[tool.poetry]
name = "rss-llm-digest"
version = "0.1.0"
description = "Project with LangChain and DeepSeek"
authors = ["Alex <cigurd186@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
langchain-core = "1.2.13"
langchain-classic = "1.0.1"
langchain-chroma = "1.1.0"
langchain-huggingface = "1.2.0"
langchain-community = "0.4.1"
feedparser = "6.0.12"
aiogram = "3.25.0"
langchain-deepseek = "1.0.1"
loguru = "0.7.3"
pyyaml = "6.0.3"

[tool.poetry.group.dev.dependencies]
flake8 = "7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"